unique-ingress-host/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sUniqueIngressHost
metadata:
  name: unique-ingress-host
spec:
  match:
    kinds:
      - apiGroups: ["extensions", "networking.k8s.io"]
        kinds: ["Ingress"]
    # namespaces:
    #   - "default"
    # excludedNamespaces: ["kube-system"]
  enforcementAction: dryrun
